--- a/health-monitor/src/main/resources/application.yml
+++ b/health-monitor/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
           zkNodes: localhost
           brokers: localhost
           replication-factor: 1
+
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: healthInfo
