refactor health-monitor-app
    - add model.Anomaly and model.MedicalInstruction
    - refactor sercice.HealthMonitorService

--- a/health-monitor/src/main/resources/application.yml
+++ b/health-monitor/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
           destination: health-info
         healthInfoConsumer-in-0:
           destination: health-info
+        anomaly-out-0:
+          destination: anomaly
 
       kafka:
         binder:
