--- a/health-monitor/src/main/resources/application.yml
+++ b/health-monitor/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     stream:
       function:
-        definition: healthInfoSupplier; healthInfoConsumer
+        definition: healthInfoSupplier; healthInfoConsumer; medicalInstructionConsumer
 
       bindings:
         healthInfoSupplier-out-0:
@@ -11,12 +11,20 @@ spring:
           destination: health-info
         anomaly-out-0:
           destination: anomaly
+        medicalInstructionConsumer-in-0:
+          destination: medicalInstruction
 
       kafka:
         binder:
           zkNodes: localhost
           brokers: localhost
           replication-factor: 1
+
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+    password: my-secret
 
   data:
     mongodb:
