--- a/configserver/src/main/resources/config/gateway-service.yml
+++ b/configserver/src/main/resources/config/gateway-service.yml
@@ -28,7 +28,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: http://eureka-server:8070/eureka/
 
 management:
   endpoints:
