--- a/configserver/src/main/resources/config/health-monitor-service.yml
+++ b/configserver/src/main/resources/config/health-monitor-service.yml
@@ -16,19 +16,19 @@ spring:
 
       kafka:
         binder:
-          zkNodes: localhost
-          brokers: localhost
+          zkNodes: kafka
+          brokers: kafka
           replication-factor: 1
 
   redis:
-    host: localhost
+    host: redis
     port: 6379
     database: 0
     password: my-secret
 
   data:
     mongodb:
-      host: localhost
+      host: mongo
       port: 27017
       database: health-monitor
 
@@ -39,4 +39,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: http://eureka-server:8070/eureka/
