adapt config for docker for health-monitor

--- a/health-monitor/src/main/resources/bootstrap.yml
+++ b/health-monitor/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: health-monitor-service
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://configserver:8071
