--- a/medical-care-app/src/main/resources/bootstrap.yml
+++ b/medical-care-app/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: medical-care-service
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://configserver:8071
