--- a/discovery-service/src/main/resources/bootstrap.yml
+++ b/discovery-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: discovery-service
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://configserver:8071
     loadbalancer:
       ribbon:
         enabled: false
