--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
   configserver:
     image: galaxyshih/configserver
@@ -7,7 +7,7 @@ services:
     ports:
       - "8071:8071"
     healthcheck:
-      test: curl -f http://localhost:8071/actuator/refresh
+      test: ["CMD-SHELL", "curl -f http://localhost:8071/actuator/refresh || exit 1"]
       interval: 30s
       retries: 3
       timeout: 10s
@@ -19,20 +19,16 @@ services:
     image: mongo
     ports:
       - "27017:27017"
-    volumes_from:
-      - mongodata
+    volumes:
+      - mongodata:/data/db
     networks:
       backend:
         aliases:
           - "mongo"
-  mongodata:
-    image: tianon/true
-    volumes:
-      - /data/db
   redisserver:
     image: redis:alpine
     ports:
-      - 6379:6379
+      - "6379:6379"
     networks:
       backend:
         aliases:
@@ -40,7 +36,7 @@ services:
   zookeeper:
     image: wurstmeister/zookeeper:latest
     ports:
-      - 2181:2181
+      - "2181:2181"
     networks:
       backend:
         aliases:
@@ -48,12 +44,12 @@ services:
   kafkaserver:
     image: wurstmeister/kafka:latest
     ports:
-      - 9092:9092
+      - "9092:9092"
     environment:
-      - KAFKA_ADVERTISED_HOST_NAME=kafka
-      - KAFKA_ADVERTISED_PORT=9092
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CREATE_TOPICS=dresses:1:1,ratings:1:1
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "dresses:1:1,ratings:1:1"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
@@ -65,9 +61,9 @@ services:
   discovery-service:
     image: galaxyshih/discovery-service
     ports:
-      - "8070:8070"  
+      - "8070:8070"
     healthcheck:
-      test: curl -f http://localhost:8070/
+      test: ["CMD-SHELL", "curl -f http://localhost:8070/ || exit 1"]
       interval: 30s
       retries: 3
       timeout: 10s
@@ -77,8 +73,7 @@ services:
       CONFIGSERVER_URI: "http://configserver:8071"
       CONFIGSERVER_PORT: "8071"
     depends_on:
-      configserver:
-        condition: service_healthy
+      - configserver
     networks:
       backend:
         aliases:
@@ -95,10 +90,8 @@ services:
       EUREKASERVER_URI: "http://discovery-service:8070/eureka/"
       EUREKASERVER_PORT: "8070"
     depends_on:
-      configserver:
-        condition: service_healthy
-      discovery-service:
-        condition: service_healthy
+      - configserver
+      - discovery-service
     networks:
       backend:
         aliases:
@@ -115,10 +108,8 @@ services:
       EUREKASERVER_URI: "http://discovery-service:8070/eureka/"
       EUREKASERVER_PORT: "8070"
     depends_on:
-      configserver:
-        condition: service_healthy
-      discovery-service:
-        condition: service_healthy
+      - configserver
+      - discovery-service
     networks:
       backend:
         aliases:
@@ -135,15 +126,16 @@ services:
       EUREKASERVER_URI: "http://discovery-service:8070/eureka/"
       EUREKASERVER_PORT: "8070"
     depends_on:
-      configserver:
-        condition: service_healthy
-      discovery-service:
-        condition: service_healthy
+      - configserver
+      - discovery-service
     networks:
       backend:
         aliases:
-          - "health-monitor"
+          - "medical-care"
 
 networks:
   backend:
     driver: bridge
+
+volumes:
+  mongodata:
